--- a/css/main.css
+++ b/css/main.css
@@ -353,6 +353,7 @@ body {
   margin-left: 5rem;
   margin-top: 3rem;
   margin-right: 5rem;
+  margin-bottom: 5rem;
   background-color: black;
   /* font-family: Montserrat; */
   font-family: 'Montserrat', sans-serif;
