--- a/css/main.css
+++ b/css/main.css
@@ -283,25 +283,25 @@
 
 /* https://www.w3schools.com/howto/howto_css_image_text.asp */
 .header-text {
-  position: absolute;
-  top: 37%;
+  position: relative;
+  top: -65%;
   left: 65%;
   color: white;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-bottom: -110px;
+  margin-bottom: -10rem;
 }
 
 /* crop for services header https://stackoverflow.com/questions/493296/css-display-an-image-resized-and-cropped */
 .crop-header {
   width: 100%;
-  height: 45rem;
+  height: 40rem;
   overflow: hidden;
 }
 
 .crop-header img {
   width: 100%;
   height: 100%;
-  margin: -50px 0 0 0px;
+  margin: 0px 0 0 0px;
   object-fit: cover;
 }
 
