--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,23 @@
   flex: 1;
 }
 
+.container-about-us {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-radius: 3px;
+  justify-content: center;
+}
+
+.block-about-us {
+  padding: 2%;
+}
+
+.block-about-us .stretch {
+  flex: 1;
+}
+
+
 /* Reference for using span for checkout from https://www.w3schools.com/howto/howto_css_checkout_form.asp */
 span.price{
   float: right;
