Added query for changing header-text when viewport shrinks
the header text will become centered once the screen shrinks to a certain size.

--- a/css/queries.css
+++ b/css/queries.css
@@ -12,3 +12,19 @@
     transform: none;
   }
 }
+
+@media screen and (max-width: 900px) {
+
+  body {
+    background-color: blue;
+  }
+  .header-text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
