Added css code for contact input text, containers and blocks
added container-contact-us, added input-text-about-us, and #Message to increase the height of the message input

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,29 @@
   font-weight: bold;
 }
 
+.input-text-about-us {
+  background: #ededed;
+  border-radius: 5px;
+  font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 1rem;
+  width: 30rem;
+  height: 2rem;
+}
+
+.input-text-about-us:hover {
+  background: #DAA520;
+}
+
+.input-text-about-us:hover {
+  background: #DAA520;
+}
+
+.input-text-about-us:focus {
+  background: #e0e0e0;
+  border-color: #DAA520;
+  outline-color: #DAA520;
+}
+
 /* Styling for image as a link. Reference from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity */
 .image-link {
   max-height: 100%;
@@ -330,12 +353,29 @@
   margin-left: 2.5rem;
 }
 
+.container-contact-us {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-radius: 3px;
+  justify-content: center;
+}
+
+
 .block-about-us {
   padding: 2%;
 }
 
 .block-about-us .stretch {
   flex: 1;
+}
+
+.block-contact-us {
+  padding: 2%;
+}
+
+#Message {
+  height: 12rem;
 }
 
 
