--- a/css/queries.css
+++ b/css/queries.css
@@ -36,4 +36,23 @@
   .block-about-us p {
     padding-top: 0rem;
   }
+
+  .block-about-us img {
+    margin-bottom: -5rem;
+  }
+}
+
+/* query for responsive checkout form & contact us */
+@media screen and (max-width: 1000px) {
+  .block-payment {
+    flex: 0 100%;
+  }
+
+  .input-text {
+    width: 100%;
+  }
+
+  .input-text-about-us {
+    width: 100%;
+  }
 }
