Started the service page revisions
Made the old services page a detailed view page instead - will split it into two later. The new services page is still really rough right now.

--- a/css/queries.css
+++ b/css/queries.css
@@ -65,10 +65,8 @@
     margin-right: 0.5rem;
   }
 
-
   .auto-detailing-font-top {
     font-size: 1.75rem;
-
   }
 
   .mobile-font-top {
@@ -82,6 +80,10 @@
   .container-about-us {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
+  }
+
+  .input-text {
+    height: 2rem;
   }
 
 }
