--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,16 @@
 }
 
 /* Styling for navigation link. Style guide template used as reference */
+.navbar-buttons li {
+  list-style: none;
+}
+
+.navbar-buttons li a {
+  text-decoration: none;
+  padding: 1rem;
+  display: block;
+}
+
 .button-nav {
   display: inline-block;
   padding: 0.5rem;
@@ -273,14 +283,21 @@
 .topnav {
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+   align-items: center;
 }
 
 .topnav ul {
-  text-align: right;
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+
 }
 
 .topnav ul li {
-  display: inline-block;
+
 }
 
 .topnav a {
