--- a/css/queries.css
+++ b/css/queries.css
@@ -58,13 +58,12 @@
 }
 
 /* MOBILE RESPONSIVENESS QUERIES */
-@media screen and (max-width: 411px) {
+@media screen and (max-width: 800px) {
   body {
     margin-top: 0rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-
 
   .auto-detailing-font-top {
     font-size: 1.75rem;
@@ -82,6 +81,30 @@
   .container-about-us {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
+  }
+
+  .topnav{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-buttons {
+    width: 100%;
+  }
+
+  .navbar-buttons ul {
+    width: 100%;
+    flex-direction: column;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+  }
+
+  .navbar-buttons ul li {
+    text-align: center;
+  }
+
+  .navbar-buttons ul li a {
+    padding: .5rem 1rem;
   }
 
 }
