--- a/css/main.css
+++ b/css/main.css
@@ -348,12 +348,14 @@
 /* https://www.w3schools.com/howto/howto_css_image_text.asp */
 .header-text {
   position: absolute;
-  top: 37%;
+  top: 20rem;
   left: 65%;
+  /* right: 10rem; */
   color: white;
   padding-left: 20px;
   padding-right: 20px;
 }
+
 
 /* crop for services header https://stackoverflow.com/questions/493296/css-display-an-image-resized-and-cropped */
 .crop-header {
