--- a/css/queries.css
+++ b/css/queries.css
@@ -83,6 +83,10 @@
     margin-right: -1.5rem;
   }
 
+  .input-text {
+    height: 2rem;
+  }
+
   .topnav{
     flex-direction: column;
     align-items: flex-start;
@@ -104,7 +108,8 @@
   }
 
   .navbar-buttons ul li a {
-    padding: .5rem 1rem;
+    padding: .6rem 1rem;
+    margin: 0.1rem;
   }
 
 }
