--- a/css/queries.css
+++ b/css/queries.css
@@ -104,7 +104,16 @@
     margin-right: 0.5rem;
   }
 
-  .
+  .image-link {
+    /* width: 100%; */
+    height: 30rem;
+    object-fit: cover;
+    vertical-align: bottom;
+  }
+
+  .block a {
+    margin-bottom: 4rem;
+  }
 
   .block-about-us img {
     margin-bottom: -5rem;
@@ -155,6 +164,22 @@
   .navbar-buttons ul li a {
     padding: .6rem 1rem;
     margin: 0.1rem;
+  }
+}
+
+@media screen and (max-width: 457px) {
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  .header-text {
+    padding-top: 20rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  h2 {
+    font-size: 2rem;
   }
 }
 
