Altered submit button in Contact us and Checkout pages
changed the height and width of "button-form" in main

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,8 @@
   border: 1px solid #323232;
   transition-property: background-color;
   transition-duration: 0.5s;
+  width:15rem;
+  height:3rem;
 }
 
 .button-form:hover {
