--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,15 @@
   border-top-color: white;
 }
 
+.section-divider-footer {
+  padding-bottom: 1rem;
+  margin-top: 2rem;
+  padding-top: 2rem;
+  border-top-width: 0.15rem;
+  border-top-style: solid;
+  border-top-color: white;
+}
+
 /* divider for cart line (above total) */
 .divider {
   padding-bottom: 2rem;
@@ -541,6 +550,16 @@
 
 #Message {
   height: 12rem;
+}
+
+/* Styling for footer */
+.container-footer{
+ text-align: center;
+}
+
+.container-footer a{
+  display: inline-block;
+  padding: 15px;
 }
 
 /* Reference for using span for checkout from https://www.w3schools.com/howto/howto_css_checkout_form.asp */
