Updated style guide & nav bar
- Added all the templates to the style guide
- fixed styling for style guide images
- Removed the "style guide" button from the navbar for each page since it was unnecessary (already in footer)

--- a/css/queries.css
+++ b/css/queries.css
@@ -90,6 +90,10 @@
     flex: 0 100%;
   }
 
+  .image {
+    width: 100%;
+  }
+
   .container-payment {
     padding-left: 0rem;
     padding-right: 0rem;
