--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,9 @@
 
 .section-divider-footer {
   padding-bottom: 1rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
   padding-top: 2rem;
-  border-top-width: 0.15rem;
-  border-top-style: solid;
-  border-top-color: white;
+  margin-bottom: -10rem;
 }
 
 /* divider for cart line (above total) */
@@ -31,6 +29,10 @@
   padding-bottom: 2rem;
   margin-top: -1.5rem;
   border-top: 3px dashed #bbb;
+}
+
+.element .container-detailed-view h2 {
+  margin-top: 1rem;
 }
 
 /* Styling for in-text link: */
@@ -206,6 +208,12 @@
   background-color: #000000;
 }
 
+.rectangle6 {
+  height: 2rem;
+  width: 10rem;
+  background-color: #1a1a1a;
+}
+
 .rectangle5 {
   height: 2rem;
   width: 10rem;
@@ -222,8 +230,16 @@
   font-weight: lighter;
 }
 
+.detailing-font-top {
+  margin-left: -2.5rem;
+  font-family: Montserrat;
+  font-size: 2rem;
+  color: #FFFFFF;
+  font-weight: lighter;
+}
+
 .auto-detailing-font-top:hover, .mobile-font-top:hover {
-  opacity: 90%;
+  opacity: 80%;
 }
 
 /* styling for the word "mobile" for the top left corner*/
@@ -256,14 +272,7 @@
   flex-wrap: wrap;
 }
 
-
-
 .block-services {
-  /* flex: 1 0 21%;
-  margin: 1rem;
-  margin-top: 2rem;
-  width: 100px; */
-
   margin: 1rem;
   flex: 1 40%;
 }
@@ -348,12 +357,6 @@
   display: flex;
   margin: 0;
   padding: 0;
-
-
-}
-
-.topnav ul li {
-
 }
 
 .topnav a {
@@ -420,9 +423,13 @@
   flex: 1;
 }
 
-/* .block-payment .stretch {
-  flex: 1;
-} */
+.block-payment:nth-child(2) h3 {
+  margin-top: 8rem;
+}
+
+.block-payment:nth-child(3) h3 {
+  margin-top: 8rem;
+}
 
 .container-detailed-view{
   display: flex;
@@ -430,15 +437,10 @@
   flex-wrap: wrap;
   border-radius: 3px;
   justify-content: center;
-  padding-top: 3rem;
 }
 
 .container-detailed-view h2 {
-  margin-bottom: -5rem;
-}
-
-.block-detailed-view h2 {
-  margin-top: -2rem;
+  margin-bottom: 1.5rem;
 }
 
 .container-detailed-view ul {
@@ -465,8 +467,16 @@
   justify-content: center;
 }
 
-.block-detailed-view {
-  padding: 2%;
+.container-contact-us h2{
+  padding-bottom: 1rem;
+}
+
+.block-contact-us:nth-child(1) {
+  width: 30%;
+}
+
+.block-contact-us:nth-child(2) {
+  margin-top: 6rem;
 }
 
 .block-detailed-view img {
@@ -534,12 +544,15 @@
 }
 
 .block-contact-us h2 {
-  /* margin-top: -1rem; */
   margin-bottom: -1rem;
 }
 
 .block-contact-us h3 {
   padding-top: 1rem;
+}
+
+#Message {
+  height: 12rem;
 }
 
 /* reference from https://stackoverflow.com/questions/29546550/flexbox-4-items-per-row */
@@ -548,18 +561,68 @@
   margin: 2rem;
 }
 
-#Message {
-  height: 12rem;
-}
-
 /* Styling for footer */
 .container-footer{
- text-align: center;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-around;
+ background-color: #1a1a1a;
+ padding-bottom: 3rem;
+ padding-top: 3rem;
 }
 
 .container-footer a{
-  display: inline-block;
   padding: 15px;
+}
+
+.block-footer {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.block-footer ul {
+   list-style-type: none;
+   margin-left: -3.5rem;
+}
+
+.block-footer li {
+   padding-bottom: 1rem;
+}
+
+.block-footer p {
+   margin-top: -1px;
+}
+
+/* used the flexbox exercise as reference */
+.block-footer:nth-child(1) {
+  flex: 1.5;
+}
+
+.block-footer:nth-child(2) {
+  flex: 1;
+  padding-left: 8rem;
+}
+
+.block-footer:nth-child(3) {
+  flex: 1;
+}
+
+.block-footer:nth-child(4) {
+  flex: 1.5;
+}
+
+.container-footer .mobile-font-top {
+  padding-left: 2px;
+  font-size: 1.3rem;
+}
+
+.container-footer .auto-detailing-font-top {
+  margin-left: -3.5rem;
+  font-size: 1.23rem;
+}
+
+.container-footer .topnav {
+  margin-top: -1rem;
 }
 
 /* Reference for using span for checkout from https://www.w3schools.com/howto/howto_css_checkout_form.asp */
@@ -595,7 +658,6 @@ body {
   margin-right: 5rem;
   margin-bottom: 5rem;
   background-color: black;
-  /* font-family: Montserrat; */
   font-family: 'Montserrat', sans-serif;
   color: white;
 }
